solved the problem of overflowing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,7 @@
     .carousel-item{
         height: 100vh;
     }
+  
   }
 
   body{
@@ -27,6 +28,7 @@
   html{
     scroll-behavior: smooth;
 }
+
 
 .navbar{
     background-color: white;
@@ -51,6 +53,9 @@ a {
     padding: 3px 12px 3px 12px;
 }
 
+#home-map{
+    width: 100%;
+}
 .btn-floating{
     color: white;
     cursor: pointer;
